--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,14 @@ __pycache__/
 
 # vscode
 .vscode/
+pyvenv.cfg
+Scripts/activate
+Scripts/activate.bat
+Scripts/Activate.ps1
+Scripts/deactivate.bat
+Scripts/pip.exe
+Scripts/pip3.9.exe
+Scripts/pip3.exe
+Scripts/python.exe
+Scripts/pythonw.exe
+.gitignore
